# Juyao-Agentic-KnowledgeBase

./: .env.docker  .gitignore  LICENSE  README.md  docker-compose.yml  pom.xml  ry.bat  ry.sh  通用超级知识库项目.md
juyao-agentic-rag/: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  ask.py  ingest.py  pyproject.toml  requirements.txt  setup.py  优化.md
juyao-agentic-rag/config/: default.toml  local.toml.example
juyao-agentic-rag/data/: story.txt
juyao-agentic-rag/docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  KNOWLEDGE_GRAPH.md
juyao-agentic-rag/docs/eval/: GETTING_STARTED.md  METRICS.md  WORKFLOW.md
juyao-agentic-rag/reports/: sample_qa.html  sample_qa.json  story_qa.html  story_qa.json
juyao-agentic-rag/src/data/samples/: story.txt  合同.txt  爽文.txt  老街的灯.txt
juyao-agentic-rag/src/docs/启动说明/: 项目启动与测试说明.md
juyao-agentic-rag/src/juyao_agentic_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
juyao-agentic-rag/src/rag_core/: __init__.py  cli.py  config.py  contracts.py  ingest_cli.py  paths.py  vector_store.py
juyao-agentic-rag/src/rag_core/agent/: __init__.py  prompt.py  qa_chain.py  run_ingest.py  run_qa.py
juyao-agentic-rag/src/rag_core/api/: __init__.py  app.py  logging_config.py  schemas.py  schemas_admin.py
juyao-agentic-rag/src/rag_core/cli/: eval_ragas.py  ingest.py  ingest_kg.py  kafka_consumer.py  qa.py
juyao-agentic-rag/src/rag_core/core/: __init__.py  config.py  paths.py
juyao-agentic-rag/src/rag_core/domain/: __init__.py  chunk.py
juyao-agentic-rag/src/rag_core/generation/: prompt.py  qa_chain.py
juyao-agentic-rag/src/rag_core/indexing/: __init__.py  elasticsearch.py  qdrant.py
juyao-agentic-rag/src/rag_core/ingestion/: __init__.py  cleanup.py  events.py  graph_writer.py  hash_guard.py  loader.py  pipeline.py  split_ai.py  split_spans.py  splitter.py
juyao-agentic-rag/src/rag_core/knowledge_graph/: __init__.py  admin_mutations.py  admin_queries.py  client.py  cypher.py  query.py  (+7 more)
juyao-agentic-rag/src/rag_eval/: __init__.py  paths.py
juyao-agentic-rag/tests/: test_admin.py  test_core.py
juyao-agentic-rag/启动说明/: 项目启动与测试说明.md
(+445 files in other folders)
